--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 
+html{
+    scroll-behavior: smooth;
+}
 body{
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
@@ -7,12 +10,17 @@ body{
 .container {
     max-width: 1024px;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .header {
     background-color: #2d303a;
-    padding: 32px 0 29px;
+    padding: 30px 0 29px;
     border-bottom: solid 6px #323746;
+    position: fixed;
+    width: 100%;
+    height: 28px;
+    z-index: 1;
 }
 
 .logo__header {
@@ -49,9 +57,7 @@ a {
     font-family: "Lato_Bold";
 }
 
-.navigation__header ul li a:hover {
-    color: #f06c64;
-}
+
 
 .list__header li {
     margin-right: 25px;
@@ -98,6 +104,7 @@ a {
 }
 
 .slider {
+    padding-top: 93px;
     height: 594px;
     background-color: #f06c64;
     border-bottom: 6px solid #ea676b;
@@ -118,6 +125,12 @@ a {
     padding: 174px 0 0 75px;
 }
 
+.not_active{
+    display: none;
+    height: 538px;
+    
+    
+}
 .arrow__left {
     cursor: pointer;
     position: absolute;
@@ -156,6 +169,7 @@ a {
     line-height: 30px;
     padding-left: 42px;
     letter-spacing: -0.1px;
+    overflow: hidden;
 }
 
 .info__main {
@@ -278,9 +292,12 @@ a {
 }
 
 .portfolio__navigation ul li:hover {
-    border: 1px solid #fff; 
-    color: #fff;
     cursor: pointer;
+}
+
+.portfolio__navigation ul li:first-child{
+     border: 1px solid #fff;
+     color: #fff;
 }
 
 .portfolio__allImage{
@@ -682,3 +699,67 @@ ul{
 .about__social1  .social__item img{
     padding-top: 8px;
 }
+
+.button__iphone {
+    position: absolute;
+    height: 40px;
+    top: 261px;
+    left: 439px;
+    border-radius: 50%;
+    width: 40px;
+}
+
+.button__iphone_vertical {
+    position: absolute;
+    height: 40px;
+    top: 462px;
+    left: 199px;
+    border-radius: 50%;
+    width: 40px;
+}
+
+.modal{
+    display: none;
+    position: fixed;
+    z-index: 2;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
+.modal-content{
+    margin: 15% auto;
+    padding: 20px;
+    width: 80%;
+}
+
+.modal-content p {
+ text-align: center;
+ overflow: hidden;
+ color: #aaa;
+ font-size: 28px;
+ font-weight: bold;
+}
+
+
+.modal-content span{
+    color: #fff; 
+    display: block;
+    font-size: 32px;
+    font-weight: bold;
+    text-align: center;
+    cursor: pointer;
+    margin: 1px auto;
+    width: 20px;
+}
+
+.anchor {
+    height: 100px;
+}
+.anchor1{
+    height: 40px;
+}
+
