--- a/style.css
+++ b/style.css
@@ -763,3 +763,281 @@ ul{
     height: 40px;
 }
 
+@media screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1020px) {
+     
+    /*Our Services*/
+    .main { height: 630px }
+    
+    .text__main h2 {    font-size: 35px;}
+    .text__main p  { width: 880px; 
+                     letter-spacing: 0px;
+                     font-size: 23px;
+                     word-spacing: 1px;
+                    text-align: justify;
+                    font-family: "Lato_Light"}
+    
+    .info__main {justify-content: space-between;
+        margin-right: 54px;}
+   
+    .info__text {font-size: 15px;
+                 padding-left: 105px;
+                word-spacing: 1.5px;
+                letter-spacing: .5px;
+                text-align: justify;}
+    
+    .info__title {font-size: 16px;
+                  padding-left: 105px;}
+   
+    .info__logo {width: 35px;
+                 height: 35px;}
+    
+    .info__block {max-width: 418px;}
+     
+    /*Portfolio*/
+    .portfolio__logo {font-size: 35px;}
+
+    .portfolio__text {width: 845px;
+                       height: 105px;
+                       font-size: 23px;
+                    word-spacing: 1.5px;
+                    letter-spacing: .2px; }
+    
+    .portfolio__navigation ul li{font-size: 14px;}
+
+    .portfolio__navigation {    width: 339px;}
+
+    .portfolio__allImage{ width: 950px;
+                          height: 1040px;}
+    .portfolio__image {transform: scale(1.25);
+                       margin: 41px 53px 33px 28px;}
+    
+    /*About Us*/
+    .about__logo {font-size: 35px;}
+
+    .about__info { font-size: 23px;
+                   width: 889px;
+                   padding: 24px 0 82px 42px;}
+
+    .about__name {font-size: 22px;}
+    
+    .about__text{    width: 284px;
+                    font-size: 15px;}
+    
+    .about__photo {    width: 295px;}
+
+    .about__social {    margin-top: 11px;}
+
+    .social__item  {transform: scale(1.2);
+                     margin-right: 15px;}
+
+    .about {height: 820px;}
+
+    .about__block {height: 487px;}
+    
+    /*Get a Quote*/
+    .logo__contact {font-size: 35px;}
+
+    .text__contact {font-size: 23px;
+                    width: 895px;
+                    padding: 27px 0 27px 42px;}
+    div form {width: 553px;
+             overflow: hidden;
+            margin-bottom: 40px;}
+    
+    .logo__info { font-size: 23px;}
+
+    .text__info { font-size: 15px;
+                  word-spacing: 1px;
+                  letter-spacing: .5px;
+                  text-align: justify;}
+
+    .mail__info ul li { padding: 58px 0 6px 12px;
+                        transform: scale(1.2);
+                        font-size: 12px;}
+    
+    .mail__info { margin-left: 25px;}
+
+    .about__social1 .social__item { margin-right: 15px;}
+
+    .copy__footer {    font-size: 18px;}
+}
+.burger__menu {
+    display: none;
+}
+
+@media screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 767px) {
+     
+    /*Our Services*/
+    .main {     height: 2260px;}
+    
+    .text__main h2 {       font-size: 90px;}
+    .text__main p  { width: 880px; 
+                     line-height: 68px;
+                     letter-spacing: 0px;
+                     font-size: 53px;
+                     word-spacing: 1px;
+                    
+                    font-family: "Lato_Light"}
+    
+    .info__main {display: block;
+        margin-left: 330px;
+        transform: scale(2.0);
+        margin-top: 590px;
+        height: 1000px;}
+    
+    .info__block { margin-bottom: 43px;}
+
+    .info__text {font-size: 15px;
+                 padding-left: 105px;
+                word-spacing: 1.5px;
+                letter-spacing: .5px;
+                text-align: justify;}
+    
+    .info__title {font-size: 16px;
+                  padding-left: 105px;}
+   
+    .info__logo {width: 35px;
+                 height: 35px;}
+    
+    .info__block {max-width: 418px;}
+     
+    /*Portfolio*/
+    .portfolio__logo {font-size: 90px;
+                     padding: 108px 41px 48px 41px;}
+
+    .portfolio__text {width: 880px; 
+                        line-height: 68px;
+                        letter-spacing: 0px;
+                        font-size: 53px;
+                        word-spacing: 1px;
+                        margin-bottom: 212px;}
+    
+    .portfolio__navigation ul li{font-size: 14px;
+        transform: scale(2);
+        margin-right: 86px;
+        margin-left: 42px;}
+        .portfolio__navigation ul li:first-child {
+            margin-right: 55px;
+            margin-left: 15px;
+        }
+    .portfolio__navigation {    width: 900px;}
+
+    .portfolio__allImage{ width: 1020px;
+                         height: 2480px;}
+    .portfolio__image {transform: scale(2);
+                       margin: 143px 154px 84px 100px;}
+    
+    /*About Us*/
+    .about {height: 4500px;}
+    .about__logo {font-size: 90px;
+                  margin-bottom: 68px;
+                  padding: 122px 0px 18px 42px}
+
+    .about__info { width: 880px; 
+        line-height: 68px;
+        letter-spacing: 0px;
+        font-size: 53px;
+        word-spacing: 1px;
+        margin-bottom: 830px;}
+
+    .about__name {font-size: 22px;}
+    
+    .about__text {   width: 315px;
+                     font-size: 14px;}
+    
+    .about__photo {    width: 310px;}
+
+    .about__social {    margin-top: 11px;}
+    .about__allBlock:first-child  .about__social { margin-top: -7px;}
+
+    .social__item  {transform: scale(1.2);
+                     margin-right: 15px;}
+
+    .about__allBlock {display: block;
+                    flex-wrap: wrap;
+                    }
+
+    .about__block {height: 500px;
+        width: 500px;
+            margin-left: 431px;
+            margin-bottom: 715px;
+        transform: scale(2.5);}
+    
+    /*Get a Quote*/
+    .contact {height: 2000px;}
+    .logo__contact {font-size: 90px;
+                    padding: 123px 0 54px 41px;}
+
+    .text__contact {width: 880px; 
+        line-height: 68px;
+        letter-spacing: 0px;
+        font-size: 53px;
+        word-spacing: 1px;
+        margin-bottom: 518px;
+        padding: 27px 0 27px 42px;
+       }
+
+    div form {width: 553px;
+             overflow: hidden;
+            margin-bottom: 40px;
+            margin-left: 167px;
+            transform: scale(1.6);}
+
+    .block__contact {flex-wrap: wrap;
+    display: block;}
+    .info__contact {
+        transform: scale(2);
+        margin-top: 350px;
+        margin-left: 300px;
+        width: 600px;
+        height: 300px;
+    }
+    .logo__info { font-size: 23px;}
+
+    .text__info { font-size: 15px;
+                  word-spacing: 1px;
+                  letter-spacing: .5px;
+                  text-align: justify;
+                  width: 432px;}
+
+    .mail__info ul li { padding: 13px 0 6px 12px;
+                        transform: scale(1.2);
+                        font-size: 12px;}
+    
+    .mail__info { margin-left: 51px;}
+
+    .third_item {padding: 16px 0 0 7px;}
+
+    .about__social1 .social__item { margin-right: 65px;
+        display: block;
+        transform: scale(2.5);}
+
+    .about__social1 {margin-top: 45px;
+                       margin-left: 345px}
+
+    .copy__footer {   display: none;}
+
+    footer {height: 130px}
+    .all__footer {height: 130px}
+
+    /*Header*/
+    .navigation__header { display: none;}
+    .logo__header {  display: block;
+        font-size: 40px;
+                     margin-top: 22px;
+                     padding-left: 0px;
+                    margin-left: 1px}
+    .header {height: 57px;}
+    .burger__menu {display: block;
+    width: 50px;
+     height: 50px;
+     margin-left: 110px;
+     margin-right: 150px;
+     transform: scale(2.5);
+    }
+    .all__header {justify-content: start;}
+}
